# social-auth-mitxpro

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  pytest.ini  testing.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
social_auth_mitxpro/: backends.py  backends_test.py  conftest.py
